[package]
name = "kmontocam-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.12.0", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["full"] }
tower-cookies = { version = "0.9.0"}
axum = { version = "0.6.19", features = ["headers"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = { version = "1.0"}
lazy_static = { version = "1.4.0"}
